[package]
name = "rusty-keybase-protocol"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pest = "2.1.1"
avdl-parser = { path = "../avdl-parser" }