[package]
name = "keybase-protocol"
version = "0.1.1"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"
description = "Provides the Keybase types defined in the Keybase AVDL Protocol files for Rust."
repository = "https://github.com/MarcoPolo/rusty-keybase-protocol"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
pest = "2.1.1"
# avdl-serde-code-generator = { path = "../avdl-parser" }
avdl-serde-code-generator = "0.1.1"